--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,12 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
-    
+
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-        server: ftp.samkirkland.com
+        server: ftpupload.net
         username: epiz_33124908
-        password: ${{ secrets.ftp_password }}
+        password: ${{ secrets.password }}
+        protocol: ftps
+        port: 21 # todo replace with your web hosts ftps port
