--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,4 @@ jobs:
         password: ${{ secrets.password }}
         protocol: ftps
         port: 21 # todo replace with your web hosts ftps port
+        server-dir: yodhavu.epizy.com/htdocs/far
